Trying to get state to work

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
         margin: 0;
         padding: 0;
       }
+      canvas {
+      	cursor: pointer;
+      }
       .wrapper {
         display: flex;
         align-items: center;
